# OpenGLHouse

./: .gitattributes  .gitignore  ATTRIBUTIONS.md  CMakeLists.txt  README.md
blender_models/: CeilingFan.blend  Chair.blend  Door.blend  Fireplace.blend  House.blend  Lightswitch.blend  Snake.blend  Table.blend  TableScene.blend  TextureAtlas.psd  TextureFrame.blend  Window.blend  WindowBlind.blend
extlib/: README.md  tiny_obj_loader.h
extlib/glm/detail/: type_quat.inl
extlib/glm/ext/: matrix_projection.inl
resources/: README.txt
shaders/: ambientlight.fs  ambientlight.vs  basic.fs  basic.vs  omniLight.fs  omniLight.vs  omniShadowMap.fs  omniShadowMap.gs  omniShadowMap.vs  pointlight.fs  pointlight.vs  shadowmap.fs  shadowmap.vs  skybox.fs  skybox.vs  texture.fs  texture.vs
src/: FinalProj.cpp  INCLUDE_GL.h  INCLUDE_GLUT.h  NonCopyable.h  Util.h
src/camera/: Camera.cpp  Camera.h
src/lighting/: OmniLight.cpp  OmniLight.h  PointLight.h
src/math/: Math.cpp  Math.h
src/mesh/: Material.h  Mesh.cpp  Mesh.h  Shapes.cpp  Shapes.h  Vertex.h
src/renderer/: BasicRenderer.cpp  BasicRenderer.h  LightRenderer.cpp  LightRenderer.h  RenderInfo.cpp  RenderInfo.h  TextureRenderer.cpp  TextureRenderer.h
src/resources/: ResourceManager.cpp  ResourceManager.h
src/shader/: ShaderProgram.cpp  ShaderProgram.h  UniformBufferObj.cpp  UniformBufferObj.h
src/skybox/: Skybox.cpp  Skybox.h
src/texture/: Texture.cpp  Texture.h
src/transform/: Transformation.cpp  Transformation.h
